// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange should not render filler exchange cards 1`] = `
<div>
  <div>
    <div
      class="flex relative flex-col min-h-screen"
    >
      <nav
        aria-labelledby="main menu"
        class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
      >
        <div
          class="flex relative h-21"
        >
          <button
            class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
            disabled=""
          >
            <div
              class="sc-bdfBwQ iMKUsi mx-auto"
              height="10"
              width="6"
            >
              <svg>
                arrow-left.svg
              </svg>
            </div>
          </button>
          <div
            class="flex flex-1 px-8 "
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
              >
                <svg
                  width="44"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
            <ul
              class="flex mr-auto ml-4 space-x-8 h-21"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text active"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
            <div
              class="flex items-center my-auto space-x-4"
            >
              <div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                    >
                      <button
                        class="Button__StyledButton-mdtvtf-0 fHYGyx"
                        data-testid="navbar__buttons--notifications"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdfBwQ liSwOQ p-1"
                            height="18"
                            width="15"
                          >
                            <svg>
                              notification.svg
                            </svg>
                          </div>
                          <div
                            class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                          >
                            <div
                              class="w-2 h-2 rounded-full bg-theme-danger-500"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iNulIV p-1"
                        height="18"
                        width="18"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex overflow-hidden items-center rounded-lg"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iSzUah p-1"
                        height="22"
                        width="22"
                      >
                        <svg>
                          qr-code.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
            <div
              class="flex items-center my-auto ml-8"
            >
              <div
                class="text-right"
              >
                <div
                  class="text-xs font-semibold text-theme-secondary-700"
                >
                  Your balance
                </div>
                <div
                  class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
              <div
                class="flex my-0.5 ml-4 -space-x-2"
              >
                <div
                  class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-secondary-800"
                  >
                    <div
                      class="sc-bdfBwQ fPrsah"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                      data-testid="navbar__useractions"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1"
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 gGdSDT hasBorder"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="flex justify-between items-end bg-theme-background"
            >
              <div
                class="space-y-4"
              >
                <h1
                  class="mb-0 text-4xl"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
                <div
                  class="text-theme-secondary-text"
                  data-testid="header__subtitle"
                >
                  Perform swaps directly from within the wallet.
                </div>
              </div>
              <div>
                <div
                  class="flex justify-end items-top"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 ePkfgQ whitespace-nowrap"
                    data-testid="Exchange__add-exchange-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Add Exchange
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 kJTPww"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="w-full grid grid-cols-3 gap-5"
              data-testid="ExchangeGrid"
            >
              <div
                data-testid="PluginCard--test-exchange-1"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
                  data-testid="Card"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="flex-shrink-0 w-25 h-25 overflow-hidden rounded-lg"
                    >
                      <div
                        class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
                        data-testid="PluginImage__placeholder"
                      >
                        <svg>
                          plugin-logo-placeholder.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Unknown
                      </span>
                      <div
                        class="flex items-center space-x-2 mt-1 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                      >
                        <div
                          class="truncate"
                        >
                          Test Exchange 1
                        </div>
                        <span />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-testid="PluginCard--test-exchange-2"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
                  data-testid="Card"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="flex-shrink-0 w-25 h-25 overflow-hidden rounded-lg"
                    >
                      <div
                        class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
                        data-testid="PluginImage__placeholder"
                      >
                        <svg>
                          plugin-logo-placeholder.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Unknown
                      </span>
                      <div
                        class="flex items-center space-x-2 mt-1 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                      >
                        <div
                          class="truncate"
                        >
                          Test Exchange 2
                        </div>
                        <span />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-testid="PluginCard--test-exchange-3"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
                  data-testid="Card"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="flex-shrink-0 w-25 h-25 overflow-hidden rounded-lg"
                    >
                      <div
                        class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
                        data-testid="PluginImage__placeholder"
                      >
                        <svg>
                          plugin-logo-placeholder.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Unknown
                      </span>
                      <div
                        class="flex items-center space-x-2 mt-1 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                      >
                        <div
                          class="truncate"
                        >
                          Test Exchange 3
                        </div>
                        <span />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should open & close add exchange modal 1`] = `
<div>
  <div>
    <div
      class="flex relative flex-col min-h-screen"
    >
      <nav
        aria-labelledby="main menu"
        class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
      >
        <div
          class="flex relative h-21"
        >
          <button
            class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
            disabled=""
          >
            <div
              class="sc-bdfBwQ iMKUsi mx-auto"
              height="10"
              width="6"
            >
              <svg>
                arrow-left.svg
              </svg>
            </div>
          </button>
          <div
            class="flex flex-1 px-8 "
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
              >
                <svg
                  width="44"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
            <ul
              class="flex mr-auto ml-4 space-x-8 h-21"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text active"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
            <div
              class="flex items-center my-auto space-x-4"
            >
              <div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                    >
                      <button
                        class="Button__StyledButton-mdtvtf-0 fHYGyx"
                        data-testid="navbar__buttons--notifications"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdfBwQ liSwOQ p-1"
                            height="18"
                            width="15"
                          >
                            <svg>
                              notification.svg
                            </svg>
                          </div>
                          <div
                            class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                          >
                            <div
                              class="w-2 h-2 rounded-full bg-theme-danger-500"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iNulIV p-1"
                        height="18"
                        width="18"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex overflow-hidden items-center rounded-lg"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iSzUah p-1"
                        height="22"
                        width="22"
                      >
                        <svg>
                          qr-code.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
            <div
              class="flex items-center my-auto ml-8"
            >
              <div
                class="text-right"
              >
                <div
                  class="text-xs font-semibold text-theme-secondary-700"
                >
                  Your balance
                </div>
                <div
                  class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
              <div
                class="flex my-0.5 ml-4 -space-x-2"
              >
                <div
                  class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-secondary-800"
                  >
                    <div
                      class="sc-bdfBwQ fPrsah"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                      data-testid="navbar__useractions"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1"
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 gGdSDT hasBorder"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="flex justify-between items-end bg-theme-background"
            >
              <div
                class="space-y-4"
              >
                <h1
                  class="mb-0 text-4xl"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
                <div
                  class="text-theme-secondary-text"
                  data-testid="header__subtitle"
                >
                  Perform swaps directly from within the wallet.
                </div>
              </div>
              <div>
                <div
                  class="flex justify-end items-top"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 ePkfgQ whitespace-nowrap"
                    data-testid="Exchange__add-exchange-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Add Exchange
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 kJTPww"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="w-full grid grid-cols-3 gap-5"
              data-testid="ExchangeGrid"
            >
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should render 1`] = `
<div>
  <div>
    <div
      class="flex relative flex-col min-h-screen"
    >
      <nav
        aria-labelledby="main menu"
        class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
      >
        <div
          class="flex relative h-21"
        >
          <button
            class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
            disabled=""
          >
            <div
              class="sc-bdfBwQ iMKUsi mx-auto"
              height="10"
              width="6"
            >
              <svg>
                arrow-left.svg
              </svg>
            </div>
          </button>
          <div
            class="flex flex-1 px-8 "
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
              >
                <svg
                  width="44"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
            <ul
              class="flex mr-auto ml-4 space-x-8 h-21"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text active"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
            <div
              class="flex items-center my-auto space-x-4"
            >
              <div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                    >
                      <button
                        class="Button__StyledButton-mdtvtf-0 fHYGyx"
                        data-testid="navbar__buttons--notifications"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdfBwQ liSwOQ p-1"
                            height="18"
                            width="15"
                          >
                            <svg>
                              notification.svg
                            </svg>
                          </div>
                          <div
                            class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                          >
                            <div
                              class="w-2 h-2 rounded-full bg-theme-danger-500"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iNulIV p-1"
                        height="18"
                        width="18"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex overflow-hidden items-center rounded-lg"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iSzUah p-1"
                        height="22"
                        width="22"
                      >
                        <svg>
                          qr-code.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
            <div
              class="flex items-center my-auto ml-8"
            >
              <div
                class="text-right"
              >
                <div
                  class="text-xs font-semibold text-theme-secondary-700"
                >
                  Your balance
                </div>
                <div
                  class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
              <div
                class="flex my-0.5 ml-4 -space-x-2"
              >
                <div
                  class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-secondary-800"
                  >
                    <div
                      class="sc-bdfBwQ fPrsah"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                      data-testid="navbar__useractions"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1"
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 gGdSDT hasBorder"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="flex justify-between items-end bg-theme-background"
            >
              <div
                class="space-y-4"
              >
                <h1
                  class="mb-0 text-4xl"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
                <div
                  class="text-theme-secondary-text"
                  data-testid="header__subtitle"
                >
                  Perform swaps directly from within the wallet.
                </div>
              </div>
              <div>
                <div
                  class="flex justify-end items-top"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 ePkfgQ whitespace-nowrap"
                    data-testid="Exchange__add-exchange-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Add Exchange
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 kJTPww"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="w-full grid grid-cols-3 gap-5"
              data-testid="ExchangeGrid"
            >
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should render filler exchange cards 1`] = `
<div>
  <div>
    <div
      class="flex relative flex-col min-h-screen"
    >
      <nav
        aria-labelledby="main menu"
        class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
      >
        <div
          class="flex relative h-21"
        >
          <button
            class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
            disabled=""
          >
            <div
              class="sc-bdfBwQ iMKUsi mx-auto"
              height="10"
              width="6"
            >
              <svg>
                arrow-left.svg
              </svg>
            </div>
          </button>
          <div
            class="flex flex-1 px-8 "
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
              >
                <svg
                  width="44"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
            <ul
              class="flex mr-auto ml-4 space-x-8 h-21"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text active"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
            <div
              class="flex items-center my-auto space-x-4"
            >
              <div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                    >
                      <button
                        class="Button__StyledButton-mdtvtf-0 fHYGyx"
                        data-testid="navbar__buttons--notifications"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdfBwQ liSwOQ p-1"
                            height="18"
                            width="15"
                          >
                            <svg>
                              notification.svg
                            </svg>
                          </div>
                          <div
                            class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                          >
                            <div
                              class="w-2 h-2 rounded-full bg-theme-danger-500"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iNulIV p-1"
                        height="18"
                        width="18"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex overflow-hidden items-center rounded-lg"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iSzUah p-1"
                        height="22"
                        width="22"
                      >
                        <svg>
                          qr-code.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
            <div
              class="flex items-center my-auto ml-8"
            >
              <div
                class="text-right"
              >
                <div
                  class="text-xs font-semibold text-theme-secondary-700"
                >
                  Your balance
                </div>
                <div
                  class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
              <div
                class="flex my-0.5 ml-4 -space-x-2"
              >
                <div
                  class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-secondary-800"
                  >
                    <div
                      class="sc-bdfBwQ fPrsah"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                      data-testid="navbar__useractions"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1"
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 gGdSDT hasBorder"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="flex justify-between items-end bg-theme-background"
            >
              <div
                class="space-y-4"
              >
                <h1
                  class="mb-0 text-4xl"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
                <div
                  class="text-theme-secondary-text"
                  data-testid="header__subtitle"
                >
                  Perform swaps directly from within the wallet.
                </div>
              </div>
              <div>
                <div
                  class="flex justify-end items-top"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 ePkfgQ whitespace-nowrap"
                    data-testid="Exchange__add-exchange-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Add Exchange
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 kJTPww"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="w-full grid grid-cols-3 gap-5"
              data-testid="ExchangeGrid"
            >
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should render with exchanges 1`] = `
<div>
  <div>
    <div
      class="flex relative flex-col min-h-screen"
    >
      <nav
        aria-labelledby="main menu"
        class="NavigationBar__NavWrapper-sc-1qsoskw-0 fEprgm"
      >
        <div
          class="flex relative h-21"
        >
          <button
            class="BackButton__StyledBackButton-sc-1pe22tv-0 eUphun flex w-12"
            disabled=""
          >
            <div
              class="sc-bdfBwQ iMKUsi mx-auto"
              height="10"
              width="6"
            >
              <svg>
                arrow-left.svg
              </svg>
            </div>
          </button>
          <div
            class="flex flex-1 px-8 "
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="NavigationBar__LogoContainer-sc-1qsoskw-2 tulfg"
              >
                <svg
                  width="44"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
            <ul
              class="flex mr-auto ml-4 space-x-8 h-21"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  aria-current="page"
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text active"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center px-1 font-semibold transition-colors duration-200 text-md text-theme-secondary-text"
                  href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
            <div
              class="flex items-center my-auto space-x-4"
            >
              <div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                    >
                      <button
                        class="Button__StyledButton-mdtvtf-0 fHYGyx"
                        data-testid="navbar__buttons--notifications"
                        type="button"
                      >
                        <div
                          class="flex relative items-center space-x-2"
                        >
                          <div
                            class="sc-bdfBwQ liSwOQ p-1"
                            height="18"
                            width="15"
                          >
                            <svg>
                              notification.svg
                            </svg>
                          </div>
                          <div
                            class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                          >
                            <div
                              class="w-2 h-2 rounded-full bg-theme-danger-500"
                            />
                          </div>
                        </div>
                      </button>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iNulIV p-1"
                        height="18"
                        width="18"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex overflow-hidden items-center rounded-lg"
              >
                <div
                  class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 eUPnft"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 fHYGyx"
                    data-testid="navbar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="sc-bdfBwQ iSzUah p-1"
                        height="22"
                        width="22"
                      >
                        <svg>
                          qr-code.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
            <div
              class="flex items-center my-auto ml-8"
            >
              <div
                class="text-right"
              >
                <div
                  class="text-xs font-semibold text-theme-secondary-700"
                >
                  Your balance
                </div>
                <div
                  class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                >
                  <span
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
              <div
                class="flex my-0.5 ml-4 -space-x-2"
              >
                <div
                  class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 dark:border-theme-secondary-800"
                >
                  <span
                    class="text-theme-secondary-text dark:text-theme-secondary-800"
                  >
                    <div
                      class="sc-bdfBwQ fPrsah"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative"
                >
                  <span
                    data-testid="dropdown__toggle"
                  >
                    <div
                      class="cursor-pointer relative justify-center items-center align-middle rounded-full"
                      data-testid="navbar__useractions"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1"
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 gGdSDT hasBorder"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="flex justify-between items-end bg-theme-background"
            >
              <div
                class="space-y-4"
              >
                <h1
                  class="mb-0 text-4xl"
                  data-testid="header__title"
                >
                  Exchange
                </h1>
                <div
                  class="text-theme-secondary-text"
                  data-testid="header__subtitle"
                >
                  Perform swaps directly from within the wallet.
                </div>
              </div>
              <div>
                <div
                  class="flex justify-end items-top"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 ePkfgQ whitespace-nowrap"
                    data-testid="Exchange__add-exchange-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Add Exchange
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 kJTPww"
        >
          <div
            class="container px-10 mx-auto"
          >
            <div
              class="w-full grid grid-cols-3 gap-5"
              data-testid="ExchangeGrid"
            >
              <div
                data-testid="PluginCard--test-exchange"
              >
                <div
                  class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj"
                  data-testid="Card"
                >
                  <div
                    class="flex items-center space-x-4"
                  >
                    <div
                      class="flex-shrink-0 w-25 h-25 overflow-hidden rounded-lg"
                    >
                      <div
                        class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
                        data-testid="PluginImage__placeholder"
                      >
                        <svg>
                          plugin-logo-placeholder.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="flex flex-col truncate"
                    >
                      <span
                        class="text-sm font-semibold truncate text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Unknown
                      </span>
                      <div
                        class="flex items-center space-x-2 mt-1 text-lg font-bold truncate text-theme-primary-600 dark:text-theme-secondary-200"
                      >
                        <div
                          class="truncate"
                        >
                          Test Exchange
                        </div>
                        <span />
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  >
                    <div
                      class="relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="flex overflow-hidden justify-center w-4"
                        >
                          <div
                            class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                            height="1em"
                            width="1em"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
              <div
                class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer"
                data-testid="Card"
              >
                <div
                  class="flex items-center space-x-4"
                >
                  <div
                    class="h-25 w-25 rounded-xl border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                  />
                  <div
                    class="flex flex-col truncate"
                  >
                    <span
                      class="text-sm font-semibold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Author
                    </span>
                    <div
                      class="mt-1 text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800 truncate"
                    >
                      Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
